# rust-pastebin

./: .gitignore  Cargo.toml  README.md
src/: index.html  main.rs  style.css
