[package]
name = "pastry_crust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.0"
rusqlite = "0.25"
rand = "0.8"
actix-files = "0.5"
serde = { version = "1.0", features = ["derive"] }
